--- a/mmomni/ansible/playbooks/reconfigure.yml
+++ b/mmomni/ansible/playbooks/reconfigure.yml
@@ -57,6 +57,14 @@
                 group: root
                 mode: 0644
 
+            - name: "Add include dir for extras"
+              file:
+                path: /etc/nginx/inc
+                state: directory
+                owner: root
+                group: root
+                mode: 0755
+
         - name: "Delete default NGINX configuration file"
           file: "path=/etc/nginx/conf.d/default.conf state=absent"
 
