--- a/mmomni/ansible/playbooks/taiga/nginx/back.conf
+++ b/mmomni/ansible/playbooks/taiga/nginx/back.conf
@@ -16,7 +16,7 @@ location /taiga/admin {
     proxy_set_header X-Scheme $scheme;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass http://127.0.0.1:8001$1;
+    proxy_pass http://127.0.0.1:8001$request_uri;
     proxy_redirect off;
 }
 # Static files
