--- a/mmomni/ansible/playbooks/taiga/nginx/back.conf
+++ b/mmomni/ansible/playbooks/taiga/nginx/back.conf
@@ -5,7 +5,7 @@ location /taiga/api {
     proxy_set_header X-Scheme $scheme;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass http://127.0.0.1:8001/api;
+    proxy_pass http://127.0.0.1:8001/taiga/api;
     proxy_redirect off;
 }
 
