--- a/mmomni/ansible/playbooks/taiga/reconfigure.yml
+++ b/mmomni/ansible/playbooks/taiga/reconfigure.yml
@@ -178,10 +178,10 @@
         - name: "Change root for api in urls.py"
           lineinfile:
             path: '{{ taiga_back_root }}/taiga/urls.py'
-            regex: '^\s+path(.(taiga/)?api/v1/.,.*'
+            regex: '^\s+path\(.(taiga/)?api/v1/.,.*'
             line: "    path('taiga/api/v1/', include(router.urls)),"
         - name: "Change root for admin in urls.py"
           lineinfile:
             path: '{{ taiga_back_root }}/taiga/urls.py'
-            regex: '^\s+path(.(taiga/)?admin/.,.*'
+            regex: '^\s+path\(.(taiga/)?admin/.,.*'
             line: "    path('taiga/admin/', admin.site.urls),"
